Resolved the gridlock causing by the failure of eco-routing.